--- a/index.html
+++ b/index.html
@@ -53,6 +53,12 @@
       </div>
     </div>
   </div>
+  <footer class="bg-green-500 text-white py-4 fixed bottom-0 w-full">
+    <div class="container mx-auto text-center">
+      <p>Página desenvolvida por <a href="https://github.com/mrmateussiilva">mrmateussiilva</a></p>
+    </div>
+  </footer>
+
 
 <script src="main.js"></script>
 </body>
